<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
   <!-- <item
        android:id="@+id/book_add_item"
        android:orderInCategory="100"
        android:title="@string/add_item" />-->


    <!--<item-->

        <!--android:id="@+id/book_EditKot_item"-->
        <!--android:orderInCategory="102"-->
        <!--android:title="@string/Edit_item" />-->

    <item
        android:id="@+id/book_add_item"
        android:orderInCategory="101"
        android:title="@string/add_item_kot" />



    <item
        android:id="@+id/book_table_status"
        android:orderInCategory="102"
        android:title="@string/table_status" />
 <item

     android:id="@+id/book_update_item"
     android:orderInCategory="103"
     android:title="@string/update_item" />
 <item
     android:id="@+id/table_transfer"
     android:orderInCategory="104"
     android:title="@string/Table_Transfer" />
    <!--<item-->
        <!--android:id="@+id/book_table_status1"-->
        <!--android:orderInCategory="105"-->
        <!--android:title="@string/table_status1" />-->
    <item
        android:id="@+id/item_transfer"
        android:orderInCategory="105"
        android:title="@string/table_item_transfer" />
    <!--<item-->

        <!--android:id="@+id/up"-->
        <!--android:orderInCategory="105"-->
        <!--android:title="@string/UP" />-->



</menu>
