<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/cardview_height"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardElevation="@dimen/card_elevation"
    card_view:cardMaxElevation="6dp"
    card_view:cardBackgroundColor="@color/headerColor"
    card_view:cardCornerRadius="@dimen/corner_radius"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/foodOrder.topRelative">

        <com.ebits.restro.activities.utils.tools.CircularWithoutNetworkImageView
            android:layout_width="@dimen/drawer_circular_image"
            android:layout_height="@dimen/drawer_circular_image"
            android:src="@drawable/chicken_manchu"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/drawer_margin_left"
            app:civ_border_width="@dimen/drawer_civ_border"
            app:civ_border_color="@color/textColorPrimary"
            android:id="@+id/foodOrder.foodImageView" />


        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/drawer_circular_image1"
            android:layout_toRightOf="@id/foodOrder.foodImageView"
            android:layout_marginLeft="@dimen/drawer_margin_left2"
            android:layout_marginStart="5dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/drawer_circular_image"
                android:id="@+id/foodOrder.relativeNames"
                android:gravity="center">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_name"
                    android:id="@+id/foodOrder.recipeTextView"
                    android:textColor="@color/textColorPrimary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_rate"
                    android:id="@+id/foodOrder.recipeRateNameTextView"
                    android:layout_below="@id/foodOrder.recipeTextView"
                    android:textColor="@color/textColorPrimary"
                    />
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/foodOrder.recipeRateTextView"
                    android:layout_below="@id/foodOrder.recipeTextView"
                    android:textColor="@color/textColorPrimary"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/foodOrder.recipeRateNameTextView"
                    />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/chicken_manchu"
                    android:layout_below="@id/foodOrder.recipeRateTextView"
                    android:id="@+id/foodOrder.relativeQty" >


                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/foodOrder.plusQtyBtn"
                        android:src="@drawable/plusbtn"
                        android:background="@color/transparentColor"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recipe_qty"
                        android:id="@+id/foodOrder.recipeQtyTextView"
                        android:layout_toRightOf="@id/foodOrder.plusQtyBtn"
                        android:textColor="@color/textColorPrimary"
                        android:layout_marginLeft="@dimen/drawer_margin_left2"
                        android:layout_marginStart="@dimen/drawer_margin_left2"
                        android:layout_marginRight="@dimen/drawer_margin_left2"
                        android:layout_marginEnd="@dimen/drawer_margin_left2"
                        android:gravity="center"
                        />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/foodOrder.minusQtyBtn"
                        android:layout_toRightOf="@id/foodOrder.recipeQtyTextView"
                        android:src="@drawable/minusbtn"
                        android:background="@color/transparentColor"/>

                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_value"
                    android:id="@+id/foodOrder.recipeValueNameTextView"
                    android:layout_below="@id/foodOrder.relativeQty"
                    android:textColor="@color/textColorPrimary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_value"
                    android:id="@+id/foodOrder.recipeValueTextView"
                    android:layout_below="@id/foodOrder.relativeQty"
                    android:textColor="@color/textColorPrimary"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/foodOrder.recipeValueNameTextView"
                    />
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/foodOrder.recipeId"
                    android:layout_below="@id/foodOrder.recipeRateTextView"
                    android:textColor="@color/textColorPrimary"
                    android:visibility="gone"
                    />

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:id="@+id/foodOrder.bottomRelative"
        android:layout_marginBottom="@dimen/drawer_margin_left2"
        android:layout_marginRight="@dimen/drawer_margin_left2"
        >

        <TextView
            android:text="vfkgjtkrmgkrn"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary"
            android:layout_centerHorizontal="true"
            android:id="@+id/foodOrder.descriptionTextView"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:freezesText="true"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foodOrder.descriptionBtn"
            android:src="@drawable/describebtn"
            android:background="@color/transparentColor"
            android:layout_below="@id/foodOrder.descriptionTextView"
            android:layout_marginTop="@dimen/drawer_margin_left2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="0dp"
            android:id="@+id/foodOrder.chargableNonChargable"
            android:visibility="gone"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foodOrder.nonChargableBtn"
            android:layout_toRightOf="@id/foodOrder.descriptionBtn"
            android:src="@drawable/cbtn"
            android:background="@color/transparentColor"
            android:layout_marginLeft="@dimen/drawer_margin_left2"
            android:layout_marginStart="@dimen/drawer_margin_left2"
            android:layout_below="@id/foodOrder.descriptionTextView"
            android:layout_marginTop="@dimen/drawer_margin_left2"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foodOrder.deleteBtn"
            android:layout_toRightOf="@id/foodOrder.nonChargableBtn"
            android:src="@drawable/deletebtn"
            android:background="@color/transparentColor"
            android:layout_marginLeft="@dimen/drawer_margin_left2"
            android:layout_marginStart="@dimen/drawer_margin_left2"
            android:layout_below="@id/foodOrder.descriptionTextView"
            android:layout_marginTop="@dimen/drawer_margin_left2"/>


    </RelativeLayout>



</android.support.v7.widget.CardView>